# ELEG4701_Intelligent_Interactive_Robot_Practice

./: .gitignore  README.md
ELEG4701_Intelligent_Interactive_Robot_Practice/ros_aruco/: README.md  kinect2_cameraMatrix.txt
ELEG4701_Intelligent_Interactive_Robot_Practice/ros_aruco/launch/: bag_test.launch
ELEG4701_Intelligent_Interactive_Robot_Practice/ros_aruco/src/: aruco_sub.cpp  aruco_sub_arm2.cpp
ELEG4701_Intelligent_Interactive_Robot_Practice/templates/: README.md  template_service_server.py
Lec8_OpenCV/: README.md
Lec8_OpenCV/launch/step1_image convert/: convertandshow.launch
Lec8_OpenCV/launch/step2_image_process/: image_process.launch
Lec8_OpenCV/launch/step3_tran_position/: tran_position.launch
Lec8_OpenCV/manipulation_demo/: CMakeLists.txt  package.xml
Lec8_OpenCV/manipulation_demo/src/: excute_position_control.py  execute_gripper_move.py  execute_translate_control.py  get_abs_pose.py  get_camera_pose.py  go_home.py  manipulation_auto.py  manipulation_base.py
Lec8_OpenCV/src/: check.py  imageconvert.py  opencv_img_processing_V6.py  position_process.py
OpenCV/: README.md
aruco_msg/: CMakeLists.txt  README.md  package.xml
navigation/: README.md  send_goal_to_move_base_template.py
navigation_movebase/: move_base_action_agent.py
ros_aruco/: CMakeLists.txt  README.md  README.md.txt  package.xml
ros_aruco/launch/: aruco.launch
ros_aruco/msg/: aruco_tf_id.msg
ros_aruco/src/: aruco_sub.cpp  aruco_sub_arm1.cpp  aruco_sub_arm2.cpp
templates/: template_service_client.py  template_topic_publisher.py  template_topic_subscriber.py
