<?xml version="1.0"?>
<package format="2">
  <name>ros_aruco</name>
  <version>0.0.0</version>
  <description>The ros_aruco package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mh@todo.todo">mh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>

</package>
